[tool.poetry]
name = "asgi_lab"
version = "0.1.0"
description = ""
authors = ["Rain Wu <rain.wu@appier.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
fastapi = ">=0.74.1"
SQLAlchemy = ">=1.4.31"
uvicorn = ">=0.17.5"
python-dotenv = ">=0.19.2"

[tool.poetry.dev-dependencies]
black = ">=22.1.0"
isort = ">=5.10.1"
pytest = ">=7.0.1"
pytest-cov = ">=3.0.0"
pytest-xdist = ">=2.5.0"
hypothesis = ">=6.37.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
